--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
 @import './styles/components/forms.css';
 @import './styles/components/reader.css';
 @import './styles/components/settings.css';
+@import './styles/components/me.css';
 @import './styles/utils/animations.css';
 @import './styles/utils/utilities.css';
 
